try 3d slideshow effect

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-
 /images
 /bin
 /gen
 /assets/www/images
+/PC/images
+/Android Pad/assets/www/images
+/PC/images
+/PC/images
+/Android Pad/assets/www/images
