--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-/images
-/bin
-/gen
-/assets/www/images
-/PC/images
-/Android Pad/assets/www/images
-/PC/images
-/PC/images
-/Android Pad/assets/www/images
+images
+bin
+gen
+.idea
